k8s/dev/api-start-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-start-deploy
  namespace: sample
  labels:
    app: api-start
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-start
  template:
    metadata:
      labels:
        app: api-start
    spec:
      containers:
      - name: api-start
        image: oscka/api-start  # on server
        # image: simple-api
        ports: 
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: api-start-svc
  namespace: sample
spec:
  selector:
    app: api-start
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
