k8s/dev/api-start-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-start-ingress
  namespace: sample
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "api-start.192.168.122.100.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-start-svc
            port:
              number: 8080
